feat: Add nodemailer package for email functionality feat: added cancel ticket functionality, and share URL
